--- a/.github/ISSUE_TEMPLATE/BUGS.yml
+++ b/.github/ISSUE_TEMPLATE/BUGS.yml
@@ -6,119 +6,10 @@ body:
     validations:
       required: true
     attributes:
-      label: '当前行为（Bug 描述）'
-      description: '这个问题是如何表现的？请详细描述当前的错误行为'
+      label: '问题描述'
+      description: '请描述问题、重现步骤、环境信息等（可直接拖拽文件附加截图或日志）'
       placeholder: |
-        当我尝试...时，发生了...
-        预期应该...，但实际上...
-
-  - type: input
-    validations:
-      required: true
-    attributes:
-      label: '重现代码或链接'
-      description: '提供能重现此问题的代码片段、截图或者在线链接。什么是最小重现？请尽可能简化问题'
-      placeholder: '请提供截图、代码片段或问题链接'
-
-  - type: textarea
-    attributes:
-      label: '重现步骤'
-      description: |
-        详细的重现步骤，帮助我们快速定位问题
-      placeholder: |
-        1. 打开文档编辑器
-        2. 点击...按钮
-        3. 输入...
-        4. 看到错误...
-
-  - type: textarea
-    validations:
-      required: true
-    attributes:
-      label: '预期行为'
-      description: '清楚简洁地描述你期望发生的行为'
-      placeholder: |
-        我期望...
-        系统应该...
-
-  - type: markdown
-    attributes:
-      value: |
-        ---
-
-  - type: input
-    validations:
-      required: true
-    attributes:
-      label: 'DocFlow 版本'
-      description: |
-        你使用的 DocFlow 版本是什么？可以在设置页面或者浏览器控制台查看
-      placeholder: 'v1.0.0 或 commit hash'
-
-  - type: dropdown
-    attributes:
-      label: '问题类型'
-      description: '这个 Bug 主要影响哪个功能？'
-      options:
-        - 文档编辑器
-        - 协作功能
-        - 文件管理
-        - 用户认证
-        - 图片/媒体处理
-        - 导入/导出
-        - 用户界面
-        - 性能问题
-        - 其他
-    validations:
-      required: true
-
-  - type: dropdown
-    attributes:
-      label: '浏览器'
-      description: '在哪个浏览器中遇到了问题？'
-      options:
-        - Chrome
-        - Firefox
-        - Safari
-        - Edge
-        - 其他 (请在下面的"其他信息"中说明)
-    validations:
-      required: true
-
-  - type: checkboxes
-    attributes:
-      label: '你在哪些操作系统上测试过？'
-      options:
-        - label: macOS
-        - label: Windows
-        - label: Linux
-        - label: iOS (Mobile Safari)
-        - label: Android
-
-  - type: dropdown
-    attributes:
-      label: '问题严重程度'
-      description: '这个问题对你的使用有多大影响？'
-      options:
-        - 低 - 不影响正常使用
-        - 中 - 有些不便但有替代方案
-        - 高 - 严重影响使用体验
-        - 紧急 - 完全无法使用某功能
-    validations:
-      required: true
-
-  - type: markdown
-    attributes:
-      value: |
-        ---
-
-  - type: textarea
-    attributes:
-      label: '其他信息'
-      description: |
-        还有其他相关信息吗？比如：日志、错误消息、设备信息等
-        💡 提示：你可以通过拖拽文件到这个区域来附加图片、录屏或日志文件
-      placeholder: |
-        浏览器控制台错误：...
-        设备信息：...
-        其他相关信息：...
+        问题：...
+        重现步骤：...
+        环境：浏览器/操作系统
+        截图/日志：...
