--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -2,67 +2,22 @@ name: '🚀 功能请求'
 description: '我有一个功能建议 💡'
 labels: ['enhancement', 'feature']
 body:
-  - type: textarea
-    validations:
-      required: true
+  - type: checkboxes
     attributes:
-      label: '功能请求是否与某个问题相关？请详细描述'
-      description: '清楚简洁地描述你遇到的问题或需求'
-      placeholder: |
-        我在使用文档编辑器时遇到了...
-        或者：我希望能够...
+      label: '是否已搜索过相关问题？'
+      description: '请先搜索 [已有问题](./?q=is%3Aissue) 确认是否已有人提出'
+      options:
+        - label: '我已搜索过相关问题'
+          required: true
 
   - type: textarea
     validations:
       required: true
     attributes:
-      label: '描述你希望的解决方案'
-      description: '清楚简洁地描述你希望实现的功能。如果有任何考虑到的缺点，也请添加'
+      label: '功能描述'
+      description: '请描述你想要的功能、使用场景、预期效果等（可直接拖拽文件附加截图或设计稿）'
       placeholder: |
         我希望能够...
-        这个功能应该...
-
-  - type: textarea
-    attributes:
-      label: '功能的使用场景和用户体验'
-      description: '如果可以的话，请解释用户将如何使用这个功能。也许可以提供截图或设计稿？'
-      placeholder: |
-        用户可以通过...来使用这个功能
-        预期的用户体验是...
-
-  - type: textarea
-    validations:
-      required: true
-    attributes:
-      label: '改变现有行为的动机/用例是什么？'
-      description: '描述添加此功能的动机或具体用例'
-      placeholder: |
-        这个功能对于文档协作很重要，因为...
-        或者：当前的工作流程中缺少...
-
-  - type: dropdown
-    attributes:
-      label: '功能类型'
-      description: '这个功能主要属于哪个方面？'
-      options:
-        - 文档编辑器
-        - 协作功能
-        - 文件管理
-        - 用户界面
-        - 性能优化
-        - 安全性
-        - 其他
-    validations:
-      required: true
-
-  - type: dropdown
-    attributes:
-      label: '优先级'
-      description: '你认为这个功能的优先级如何？'
-      options:
-        - 低 - 有了更好
-        - 中 - 希望尽快实现
-        - 高 - 对产品很重要
-        - 紧急 - 阻碍了正常使用
-    validations:
-      required: true
+        使用场景：...
+        预期效果：...
+        截图/设计稿：...
