refactor: ♻️ restructure document management with grouped file organization

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,6 @@
 NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
 
-NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
-
-NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.codecrack.cn
+NEXT_PUBLIC_SERVER_URL=http://localhost:8080
+NEXT_PUBLIC_WEBSOCKET_URL=ws://127.0.0.1:1234
 
 NEXT_PUBLIC_NOTIFICATION_WEBSOCKET_URL = https://note.codecrack.cn
