--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "framer-motion": "^12.12.1",
     "frappe-gantt": "^1.0.4",
     "hast-util-to-html": "^9.0.5",
+    "highlight.js": "^11.11.1",
     "image-meta": "^0.2.2",
     "import-in-the-middle": "^2.0.0",
     "jspdf": "^4.0.0",
