--- a/package.json
+++ b/package.json
@@ -255,6 +255,5 @@
     "node": ">=20",
     "pnpm": ">=9.0.0"
   },
-  "engineStrict": true,
-  "packageManager": "pnpm@10.22.0"
+  "engineStrict": true
 }
