feat: refactor request module and enhance blog SEO
- Separate request logic into client and server modules
  - Server: lightweight fetch without token/SSE/Sentry
  - Client: full-featured with auth, retries, and error tracking
- Split blogsApi into blogsServerApi and blogsClientApi
- Refactor DocumentHeader into smaller components
  - Extract CollaborationUsers, DocumentActions, GithubLink
  - Add useBlogPublish hook with Zod validation
- Add blog layout with SEO metadata
- Add dynamic generateMetadata for blog detail pages
  - OpenGraph article type with cover image
  - Twitter Card support
  - Canonical URLs

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "build:analyze": "next experimental-analyze",
     "analyze": "ANALYZE=true pnpm build",
