--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-export-docx": "^0.0.9",
     "ua-parser-js": "^2.0.4",
+    "use-stick-to-bottom": "^1.1.2",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
