--- a/package.json
+++ b/package.json
@@ -71,57 +71,58 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
-    "@tiptap/core": "^3.0.7",
-    "@tiptap/extension-bullet-list": "^3.0.7",
-    "@tiptap/extension-character-count": "^3.0.7",
-    "@tiptap/extension-code-block": "^3.0.7",
-    "@tiptap/extension-code-block-lowlight": "^3.0.7",
-    "@tiptap/extension-collaboration": "^3.0.7",
-    "@tiptap/extension-collaboration-caret": "^3.0.7",
-    "@tiptap/extension-color": "^3.0.7",
-    "@tiptap/extension-details": "^3.0.7",
-    "@tiptap/extension-details-content": "^2.26.1",
-    "@tiptap/extension-details-summary": "^2.26.1",
-    "@tiptap/extension-document": "^3.0.7",
-    "@tiptap/extension-drag-handle": "^3.0.7",
-    "@tiptap/extension-drag-handle-react": "^3.0.7",
-    "@tiptap/extension-dropcursor": "^3.0.7",
-    "@tiptap/extension-emoji": "^3.0.7",
-    "@tiptap/extension-file-handler": "^3.0.7",
-    "@tiptap/extension-focus": "^3.0.7",
-    "@tiptap/extension-font-family": "^3.0.7",
-    "@tiptap/extension-hard-break": "^3.0.7",
-    "@tiptap/extension-heading": "^3.0.7",
-    "@tiptap/extension-highlight": "^3.0.7",
-    "@tiptap/extension-horizontal-rule": "^3.0.7",
-    "@tiptap/extension-image": "^3.0.7",
-    "@tiptap/extension-link": "^3.0.7",
-    "@tiptap/extension-mathematics": "^3.0.7",
-    "@tiptap/extension-node-range": "^3.0.7",
-    "@tiptap/extension-ordered-list": "^3.0.7",
-    "@tiptap/extension-paragraph": "^3.0.7",
-    "@tiptap/extension-placeholder": "^3.0.7",
-    "@tiptap/extension-subscript": "^3.0.7",
-    "@tiptap/extension-superscript": "^3.0.7",
-    "@tiptap/extension-table": "^3.0.7",
-    "@tiptap/extension-table-header": "^3.0.7",
-    "@tiptap/extension-table-of-contents": "^3.0.7",
-    "@tiptap/extension-table-row": "^3.0.7",
-    "@tiptap/extension-task-item": "^3.0.7",
-    "@tiptap/extension-task-list": "^3.0.7",
-    "@tiptap/extension-text": "^3.0.7",
-    "@tiptap/extension-text-align": "^3.0.7",
-    "@tiptap/extension-text-style": "^3.0.7",
-    "@tiptap/extension-typography": "^3.0.7",
-    "@tiptap/extension-underline": "^3.0.7",
-    "@tiptap/extension-unique-id": "^3.0.7",
-    "@tiptap/extension-youtube": "^3.4.1",
-    "@tiptap/extensions": "^3.0.7",
-    "@tiptap/html": "^3.0.7",
-    "@tiptap/pm": "^3.0.7",
-    "@tiptap/react": "^3.0.7",
-    "@tiptap/starter-kit": "^3.0.7",
-    "@tiptap/suggestion": "^3.0.7",
+    "@tiptap/core": "^3.17.1",
+    "@tiptap/extension-bullet-list": "^3.17.1",
+    "@tiptap/extension-character-count": "^3.17.1",
+    "@tiptap/extension-code-block": "^3.17.1",
+    "@tiptap/extension-code-block-lowlight": "^3.17.1",
+    "@tiptap/extension-collaboration": "^3.17.1",
+    "@tiptap/extension-collaboration-caret": "^3.17.1",
+    "@tiptap/extension-color": "^3.17.1",
+    "@tiptap/extension-details": "^3.17.1",
+    "@tiptap/extension-details-content": "^2.27.2",
+    "@tiptap/extension-details-summary": "^2.27.2",
+    "@tiptap/extension-document": "^3.17.1",
+    "@tiptap/extension-drag-handle": "^3.17.1",
+    "@tiptap/extension-drag-handle-react": "^3.17.1",
+    "@tiptap/extension-dropcursor": "^3.17.1",
+    "@tiptap/extension-emoji": "^3.17.1",
+    "@tiptap/extension-file-handler": "^3.17.1",
+    "@tiptap/extension-focus": "^3.17.1",
+    "@tiptap/extension-font-family": "^3.17.1",
+    "@tiptap/extension-hard-break": "^3.17.1",
+    "@tiptap/extension-heading": "^3.17.1",
+    "@tiptap/extension-highlight": "^3.17.1",
+    "@tiptap/extension-horizontal-rule": "^3.17.1",
+    "@tiptap/extension-image": "^3.17.1",
+    "@tiptap/extension-link": "^3.17.1",
+    "@tiptap/extension-mathematics": "^3.17.1",
+    "@tiptap/extension-node-range": "^3.17.1",
+    "@tiptap/extension-ordered-list": "^3.17.1",
+    "@tiptap/extension-paragraph": "^3.17.1",
+    "@tiptap/extension-placeholder": "^3.17.1",
+    "@tiptap/extension-subscript": "^3.17.1",
+    "@tiptap/extension-superscript": "^3.17.1",
+    "@tiptap/extension-table": "^3.17.1",
+    "@tiptap/extension-table-header": "^3.17.1",
+    "@tiptap/extension-table-of-contents": "^3.17.1",
+    "@tiptap/extension-table-row": "^3.17.1",
+    "@tiptap/extension-task-item": "^3.17.1",
+    "@tiptap/extension-task-list": "^3.17.1",
+    "@tiptap/extension-text": "^3.17.1",
+    "@tiptap/extension-text-align": "^3.17.1",
+    "@tiptap/extension-text-style": "^3.17.1",
+    "@tiptap/extension-typography": "^3.17.1",
+    "@tiptap/extension-underline": "^3.17.1",
+    "@tiptap/extension-unique-id": "^3.17.1",
+    "@tiptap/extension-youtube": "^3.17.1",
+    "@tiptap/extensions": "^3.17.1",
+    "@tiptap/html": "^3.17.1",
+    "@tiptap/pm": "^3.17.1",
+    "@tiptap/react": "^3.17.1",
+    "@tiptap/starter-kit": "^3.17.1",
+    "@tiptap/suggestion": "^3.17.1",
+    "@tiptap/y-tiptap": "^3.0.2",
     "@types/lodash-es": "^4.17.12",
     "@zumer/snapdom": "^2.0.1",
     "cal-sans": "^1.0.1",
@@ -154,14 +155,14 @@
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
-    "next": "16.1.1",
+    "next": "16.1.5",
     "ofetch": "^1.5.1",
     "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
-    "react": "^19.2.3",
+    "react": "19.2.4",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.2.3",
+    "react-dom": "19.2.4",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
@@ -195,8 +196,8 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/bundle-analyzer": "16.1.1",
-    "@next/eslint-plugin-next": "^16.1.2",
+    "@next/bundle-analyzer": "16.1.5",
+    "@next/eslint-plugin-next": "16.1.5",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
@@ -209,7 +210,7 @@
     "@types/node": "22.15.18",
     "@types/prettier": "^3.0.0",
     "@types/react": "^19.2.1",
-    "@types/react-dom": "^19.2.1",
+    "@types/react-dom": "^19.2.3",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -221,7 +222,7 @@
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
     "eslint": "9.27.0",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "16.1.5",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
