--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "cmdk": "^1.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "docx": "^9.5.1",
     "dompurify": "^3.3.1",
     "emojibase-data": "^17.0.0",
