--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "mammoth": "^1.10.0",
     "markdown-it": "^14.1.0",
     "mathlive": "^0.108.2",
+    "md-editor-rt": "^6.3.1",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
