--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@azure/core-sse": "^2.3.0",
+    "@datadog/browser-logs": "^6.26.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -55,6 +56,10 @@
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
     "@hookform/resolvers": "^5.1.1",
+    "@livekit/components-react": "2.9.16",
+    "@livekit/components-styles": "1.2.0",
+    "@livekit/krisp-noise-filter": "0.3.4",
+    "@livekit/track-processors": "^0.6.0",
     "@pqina/flip": "^1.8.4",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -153,6 +158,8 @@
     "jspdf": "^4.0.0",
     "juice": "^11.0.3",
     "katex": "^0.16.22",
+    "livekit-client": "2.16.0",
+    "livekit-server-sdk": "2.14.2",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.552.0",
@@ -189,6 +196,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tinykeys": "^3.0.0",
     "tiptap-extension-export-docx": "^0.0.9",
     "ua-parser-js": "^2.0.4",
     "use-stick-to-bottom": "^1.1.2",
