feat: add alert and transformer packages for Tiptap integration

--- a/apps/DocFlow/tsconfig.json
+++ b/apps/DocFlow/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@syncflow/alert": ["../../packages/alert/dist/index.d.ts"],
+      "@syncflow/alert/*": ["../../packages/alert/dist/*"],
+      "@syncflow/transformer": ["../../packages/transformer/dist/index.d.ts"],
+      "@syncflow/transformer/*": ["../../packages/transformer/dist/*"]
     }
   },
   "include": [
