--- a/apps/DocFlow/package.json
+++ b/apps/DocFlow/package.json
@@ -40,6 +40,7 @@
     "clean": "rm -rf .next .turbo node_modules"
   },
   "dependencies": {
+    "@syncflow/alert": "workspace:*",
     "@azure/core-sse": "^2.3.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
