--- a/apps/DocFlow/package.json
+++ b/apps/DocFlow/package.json
@@ -29,7 +29,7 @@
     "last 2 Edge versions"
   ],
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev",
     "build": "next build --turbo",
     "build:webpack": "next build --webpack",
     "build:analyze": "next experimental-analyze",
