refactor(bilibili): 将 Bilibili 扩展重构为独立的 npm 包
- 将 Bilibili Tiptap 扩展从 apps/DocFlow 移动到 packages/bilibili 作为独立包
- 更新 DocFlow 应用以使用 @syncflow/bilibili 包依赖
- 重构 Bilibili 扩展以复用共享的实用函数和类型定义
- 添加构建配置（Vite、TypeScript）用于打包发布
- 保持现有功能不变，包括视频嵌入、粘贴规则和对话框交互

--- a/apps/DocFlow/tsconfig.json
+++ b/apps/DocFlow/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
-      "@syncflow/alert": ["../../packages/alert/dist/index.d.ts"],
-      "@syncflow/alert/*": ["../../packages/alert/dist/*"],
-      "@syncflow/transformer": ["../../packages/transformer/dist/index.d.ts"],
-      "@syncflow/transformer/*": ["../../packages/transformer/dist/*"]
+      "@syncflow/alert": ["../../packages/alert/src/index.ts"],
+      "@syncflow/alert/*": ["../../packages/alert/src/*"],
+      "@syncflow/transformer": ["../../packages/transformer/src/index.ts"],
+      "@syncflow/transformer/*": ["../../packages/transformer/src/*"],
+      "@syncflow/bilibili": ["../../packages/bilibili/src/index.ts"],
+      "@syncflow/bilibili/*": ["../../packages/bilibili/src/*"]
     }
   },
   "include": [
