--- a/apps/DocFlow/package.json
+++ b/apps/DocFlow/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@syncflow/alert": "workspace:*",
+    "@syncflow/bilibili": "workspace:*",
     "@azure/core-sse": "^2.3.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
