feat(transformer): 添加 Bilibili 预设并改进嵌入配置
- 新增 TiptapTransformerWithBilibili 预设，用于服务端转换
- 扩展 Bilibili URL 正则以支持 b23.tv 短域名
- 优化 iframe 属性，移除冗余属性并添加 sandbox 配置
- 更新 CSS，改进选中状态和边框样式
- 添加 @syncflow/bilibili 依赖至 transformer 包

--- a/packages/transformer/package.json
+++ b/packages/transformer/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@syncflow/alert": "workspace:*",
+    "@syncflow/bilibili": "workspace:*",
     "@tiptap/starter-kit": "^3.18.0"
   },
   "peerDependencies": {
