build(docker): add @syncflow/bilibili to Docker and turbo pipeline

--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,9 @@
     "@syncflow/alert#build": {
       "outputs": ["dist/**"]
     },
+    "@syncflow/bilibili#build": {
+      "outputs": ["dist/**"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
