--- a/apps/DocFlow/package.json
+++ b/apps/DocFlow/package.json
@@ -204,7 +204,8 @@
     "@livekit/track-processors": "^0.6.0",
     "livekit-client": "2.16.0",
     "livekit-server-sdk": "2.14.2",
-    "tinykeys": "^3.0.0"
+    "tinykeys": "^3.0.0",
+    "@datadog/browser-logs": "^6.26.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "16.1.5",
